# Practice-1

./: alembic.ini  config.py  connections.py  enums.py  main.py  pyproject.toml  userData.py  utility.py
alembic/: env.py
alembic/versions/: dd8475a6470f_create_user_table.py  e59692d6bdd5_change_column_data_type.py
models/: usertable.py
